--- a/config/default/service.yaml
+++ b/config/default/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: secret-service
-  namespace: openshift-migration
+  namespace: openshift-migration-toolkit
   annotations:
     service.beta.openshift.io/serving-cert-secret-name: crane-secret-service-certs
   labels:
