Update deployment to eliminate PodSecurity warnings (#12)

--- a/config/default/deployment.yaml
+++ b/config/default/deployment.yaml
@@ -18,22 +18,31 @@ spec:
         service: secret-service
     spec:
       containers:
-        - name: secret-service
-          env:
-          - name: GIN_MODE
-            value: release
-          - name: CRANE_SECRET_SERVICE_CRT
-            value: /certs/tls.crt
-          - name: CRANE_SECRET_SERVICE_KEY
-            value: /certs/tls.key
-          volumeMounts:
-          - mountPath: /certs
-            name: crane-secret-service-certs
-          image: quay.io/konveyor/crane-secret-service
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 8443
-              protocol: TCP
+      - name: secret-service
+        env:
+        - name: GIN_MODE
+          value: release
+        - name: CRANE_SECRET_SERVICE_CRT
+          value: /certs/tls.crt
+        - name: CRANE_SECRET_SERVICE_KEY
+          value: /certs/tls.key
+        volumeMounts:
+        - mountPath: /certs
+          name: crane-secret-service-certs
+        image: quay.io/konveyor/crane-secret-service
+        imagePullPolicy: Always
+        ports:
+          - containerPort: 8443
+            protocol: TCP
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
+      securityContext:
+        runAsNonRoot: true
+        seccompProfile:
+          type: RuntimeDefault
       volumes:
       - name: crane-secret-service-certs
         secret:
